# intelligent-recruitment

./: .gitignore  main.py  pyproject.toml  requirements.txt
agents/: candidate.py
alembic/: env.py
alembic/versions/: 20241e2515e8_delete_token_from_ding_user.py  39444693a45e_interview_result_enum_add_pending.py  5a4df4de6fd4_init_model.py
core/: cache.py  mail.py
dependencies/: __init__.py
models/: __init__.py  interview.py  user.py
repository/: candidate_repo.py  position_repo.py
routers/: candidate_router.py  position_router.py  user_router.py
schemas/: candidate_schema.py  position_schema.py  user_schema.py
settings/: __init__.py
tasks/: __init__.py
