[project]
name = "hr-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "executing==2.2.1",
    "fastapi==0.136.1",
    "fastapi-cache2[redis]>=0.1.8",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.1",
    "fastar==0.11.0",
    "filelock==3.29.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.13",
    "ipykernel==7.2.0",
    "ipython==9.13.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "jiter==0.14.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "langchain==1.2.18",
    "langchain-core==1.3.3",
    "langchain-openai==1.2.1",
    "langchain-protocol==0.0.15",
    "langgraph==1.1.10",
    "langgraph-checkpoint==4.1.0",
    "langgraph-checkpoint-postgres==3.1.0",
    "langgraph-prebuilt==1.0.13",
    "langgraph-sdk==0.3.14",
    "langsmith==0.8.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.2",
    "mdurl==0.1.2",
    "nest-asyncio==1.6.0",
    "openai==2.36.0",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "parso==0.8.7",
    "platformdirs==4.9.6",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "psycopg-pool==3.3.1",
    "pure-eval==0.2.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pyjwt>=2.12.1",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.3.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "redis>=7.4.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "rich==15.0.0",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "sentry-sdk==2.59.0",
    "shellingham==1.5.4",
    "shortuuid>=1.0.13",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "stack-data==0.6.3",
    "starlette==1.0.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.15.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uuid-utils==0.14.1",
    "uvicorn==0.46.0",
    "virtualenv==21.3.1",
    "virtualenvwrapper-win==1.2.7",
    "watchfiles==1.1.1",
    "wcwidth==0.7.0",
    "websockets==16.0",
    "xxhash==3.7.0",
    "zstandard==0.25.0",
]
